== Release notes

Every release contains many small fixes.

=== 1.6.0.0
* Support for H2 Database - much faster than derby
* In Memory Database (as extension project)

=== 1.5.0.0
* Redesign / refactoring of queries (repository)
* Extendable search tables

=== 1.4.0.0
* Repository: removed active 'push' of changes on lazy lists

=== 1.3.0.0
* SqlRepository: Oracle Dialect
* Security: removed Grant concept, redesigned authorization
* Renamed Persistence class and package to repository

=== 1.2.0.0
* Frontend: replace special Size class with a simple integer (API change)
* Persistence: Optimistic locking
* Persistence: Technical fields (create/edit by/at)

=== 1.1.0.0
* Configuration: specify all configuration properties in a config file
* MjServlet: separate it in a special project. Manage to get context parameters as configuration
* Lanterna: also moved in separate project. Still not finished.

=== 1.0.0.0
* Some packages refactored
* Restructured pom.xml (include nanohttp, make lanterna optional)

=== 0.14.0.0
* Frontend: Support for delete actions
* Web Frontend: Better detection and support for small devices

=== 0.12.0.0
* Server: use http session or websocket connection as base for session management

=== 0.11.0.1
* Web Frontend: reserve space on the right only if there is a menu
* Renamed main classes to Swing and NanoWebServer
* Search field is disabled if Application doesn't override createSearchPage method

=== 0.10.4.0
* Web Frontend: no type lag if user fills text field faster than server can respond
* SQL persistence: changed semantic of List of identifiables. No containing any more. Update or delete of elements change.
* removed sample names. The examples now use a 3rd party library for that.

=== 0.10.2.0
* Web Frontend: Make dialog button row look better in firefox
* Web Frontend: fixes for FireFox
* Web Frontend: show context actions when open a page
* Web Frontend: No initial alert in Safari

=== 0.10.1.0
* SqlPersistence: fix update of dependables