@@ -4,6 +4,7 @@ Every release contains many small fixes.
 
 === 1.6.0.0
 * Support for H2 Database - much faster than derby
+* Update maria db connector
 * In Memory Database (as extension project)
 
 === 1.5.0.0
